welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:17: error: type mismatch;
 found   : Unit
 required: String
  if((!vacation) && (day==1)) {
  ^